[package]
name = "newbase60"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/Plenglin/newbase60-rs"
repository = "https://github.com/Plenglin/newbase60-rs"
description = "A library that implements Tantek Celik's New Base 60"

[dependencies]
rstest = "0.7.0"
