[package]
name = "newbase60"
version = "0.1.4"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/astralbijection/newbase60-rs"
repository = "https://github.com/astralbijection/newbase60-rs"
description = "A library that implements Tantek Çelik's New Base 60"

[dev-dependencies]
rstest = "0.18.2"
